--- a/resources/lang/de/LoginMask.properties
+++ b/resources/lang/de/LoginMask.properties
@@ -1,4 +1,4 @@
-LoginMaskLogin = Sie haben bereits ein Konto bei uns? Dann loggen Sie sich mit Ihren vorhanden Anmeldedaten ein.
+LoginMaskLogin = Sie haben bereits ein Konto bei uns? Dann loggen Sie sich mit Ihren vorhandenen Anmeldedaten ein.
 LoginMaskGuest = Bestellen Sie schnell und einfach per Gastbestellung. Bei jeder weiteren Bestellung müssen Sie jedoch Ihre Daten erneut angeben.
 LoginMaskRegister = Sie haben noch kein Konto bei uns? Die Registrierung ist kostenlos und dauert nur wenige Minuten. In Ihrem Kundenkonto können Sie Adressen anlegen sowie Ihre Bestellungen einsehen und verwalten.
 LoginOr = oder
