--- a/resources/lang/en/LoginMask.properties
+++ b/resources/lang/en/LoginMask.properties
@@ -1,5 +1,5 @@
-LoginMaskLogin = Sie haben bereits ein Konto bei uns? Dann loggen Sie sich mit Ihren vorhanden Anmeldedaten ein.
-LoginMaskGuest = Bestellen Sie schnell und einfach per Gastbestellung. Bei jeder weiteren Bestellung müssen Sie jedoch Ihre Daten erneut angeben.
-LoginMaskRegister = Sie haben noch kein Konto bei uns? Die Registrierung ist kostenlos und dauert nur wenige Minuten. In Ihrem Kundenkonto können Sie Adressen anlegen sowie Ihre Bestellungen einsehen und verwalten.
-LoginOr = oder
-PayWith = Bezahlen mit
+LoginMaskLogin = You already have an account? Then log in with your existing login data.
+LoginMaskGuest = Order quickly and easily by guest order. Each time you place an order, you will have to enter your data again.
+LoginMaskRegister = You don't have an account? Registration is free and takes only a few minutes. You can create addresses in your customer account and view and manage your orders.
+LoginOr = or
+PayWith = pay with
